// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesList highlights requested text 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          
          <span
            className="highlighted"
          >
            run
          </span>
          -1
        </td>
      </tr>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          SMITH #op1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a ghost 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          123-0123
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a vehicle 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          run-1
        </td>
      </tr>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr>
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          SMITH #op1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
